unpackaged/objects/copado__Selenium_Locator_Reference__c.object
<CustomObject>
	<fields>
		<fullName>copado__External_ID__c</fullName>
		<externalId>true</externalId>
		<label>External ID</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Selenium_Locator__c</fullName>
		<label>Selenium Locator</label>
		<referenceTo>copado__Selenium_Locator__c</referenceTo>
		<relationshipLabel>Selenium Locator References</relationshipLabel>
		<relationshipName>Selenium_Locator_References</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copado__Selenium_Test_Case_Version__c</fullName>
		<formula>copado__Selenium_Test_Case__r.copado__Version__c</formula>
		<label>Selenium Test Case Version</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Selenium_Test_Case__c</fullName>
		<label>Selenium Test Case</label>
		<referenceTo>copado__Selenium_Test_Case__c</referenceTo>
		<relationshipLabel>Selenium Locator References</relationshipLabel>
		<relationshipName>Selenium_Locator_References</relationshipName>
		<relationshipOrder>1</relationshipOrder>
		<reparentableMasterDetail>true</reparentableMasterDetail>
		<type>MasterDetail</type>
	</fields>
	<label>Selenium Locator Reference</label>
	<nameField>
		<displayFormat>SLR-{00000}</displayFormat>
		<label>Ref#</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Selenium Locator References</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>